pkgman: Fixes to the new download progress meter.

* Make string-splitting UTF8-aware
 * If the window size is too small for the full string, mid-truncate it
 * Ensure the string is long enough if the window size is large.
 * Rework flushing strategy slightly.

Fixes #13750, as well as taos' unrelated issue he reported there.